[package]
name = "shadowdark-torch-rs"
version = "0.1.0"
authors = ["Ernesto Cruz Olivera <ecruzolivera@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "shadowdark-torch-rs"
test = false
bench = false

[[bin]]
name = "test-blink-5secs"
path = "src/test_blink_5secs.rs"
test = false
bench = false

[[bin]]
name = "test-pwm-sweep"
path = "src/test_pwm_sweep.rs"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"


# Replace arduino-hal with attiny-hal for ATtiny85
[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
rev = "0f7fa4d01755f1985d95ed2015d5464a29154b05"
features = ["attiny85", "rt"]

[dependencies.avr-device]
version = "0.8"
features = ["attiny85", "rt"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
